--- a/core/templates/faq.html
+++ b/core/templates/faq.html
@@ -14,7 +14,7 @@
         <div class="col-12 col-lg-6">
           <h2 class="h1 mb-3">How can we help you? Unlocking possibilities for your web hosting FAQs answered. </h2>
           <p class="lead fs-4 text-secondary mb-4">We hope you have found an answer to your question. If you need any help, please search your query on our Support Center or contact us via email.</p>
-          <a href="#!" class="btn btn-lg bsb-btn-2xl btn-primary">All FAQ</a>
+          <a href="{% url 'contact' %}" class="btn btn-lg bsb-btn-2xl btn-primary">All FAQ</a>
         </div>
         <div class="col-12 col-lg-6">
           <div class="row justify-content-xl-end">
