--- a/core/templates/blog.html
+++ b/core/templates/blog.html
@@ -6,7 +6,7 @@
 
 
 {% block title %}
-  {{ title }}
+  Blog
 {% endblock %}
 {% block content%}
 
@@ -23,7 +23,7 @@
             </div>
             <div class="page_link">
               <a href="{% url 'index' %}">Home</a>
-              <a href="blog.html">Blog </a>
+              <a href="{% url 'blog' %}">Blog </a>
             </div>
           </div>
         </div>
@@ -224,130 +224,11 @@
               </div>
               <div class="col-lg-4">
                   <div class="blog_right_sidebar">
-                      <aside class="single_sidebar_widget search_widget">
-                          <form action="#">
-                            <div class="form-group">
-                              <div class="input-group mb-3">
-                                <input type="text" class="form-control" placeholder="Search Keyword">
-                                <div class="input-group-append">
-                                  <button class="btn" type="button"><i class="ti-search"></i></button>
-                                </div>
-                              </div>
-                            </div>
-                            <button class="main_btn rounded-0 w-100" type="submit">Search</button>
-                          </form>
-                      </aside>
+                      
 
-                      <aside class="single_sidebar_widget post_category_widget">
-                        <h4 class="widget_title">Category</h4>
-                        <ul class="list cat-list">
-                            <li>
-                                <a href="#" class="d-flex">
-                                    <p>Resaurant food</p>
-                                    <p>(37)</p>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#" class="d-flex">
-                                    <p>Travel news</p>
-                                    <p>(10)</p>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#" class="d-flex">
-                                    <p>Modern technology</p>
-                                    <p>(03)</p>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#" class="d-flex">
-                                    <p>Product</p>
-                                    <p>(11)</p>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#" class="d-flex">
-                                    <p>Inspiration</p>
-                                    <p>21</p>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#" class="d-flex">
-                                    <p>Health Care (21)</p>
-                                    <p>09</p>
-                                </a>
-                            </li>
-                        </ul>
-                      </aside>
+                      
 
-                      <aside class="single_sidebar_widget popular_post_widget">
-                          <h3 class="widget_title">Recent Post</h3>
-                          <div class="media post_item">
-                              <img src="{% static 'img/blog/popular-post/post1.jpg' %}" alt="post">
-                              <div class="media-body">
-                                  <a href="single-blog.html">
-                                      <h3>From life was you fish...</h3>
-                                  </a>
-                                  <p>January 12, 2019</p>
-                              </div>
-                          </div>
-                          <div class="media post_item">
-                              <img src="{% static 'img/blog/popular-post/post2.jpg' %}" alt="post">                              
-                              <div class="media-body">
-                                  <a href="single-blog.html">
-                                      <h3>The Amazing Hubble</h3>
-                                  </a>
-                                  <p>02 Hours ago</p>
-                              </div>
-                          </div>
-                          <div class="media post_item">
-                              <img src="{% static 'img/blog/popular-post/post3.jpg' %}" alt="post">                              
-                              <div class="media-body">
-                                  <a href="single-blog.html">
-                                      <h3>Astronomy Or Astrology</h3>
-                                  </a>
-                                  <p>03 Hours ago</p>
-                              </div>
-                          </div>
-                          <div class="media post_item">
-                              <img src="{% static 'img/blog/popular-post/post4.jpg' %}" alt="post">
-                              <div class="media-body">
-                                  <a href="single-blog.html">
-                                      <h3>Asteroids telescope</h3>
-                                  </a>
-                                  <p>01 Hours ago</p>
-                              </div>
-                          </div>
-                      </aside>
-                      <aside class="single_sidebar_widget tag_cloud_widget">
-                          <h4 class="widget_title">Tag Clouds</h4>
-                          <ul class="list">
-                              <li>
-                                  <a href="#">project</a>
-                              </li>
-                              <li>
-                                  <a href="#">love</a>
-                              </li>
-                              <li>
-                                  <a href="#">technology</a>
-                              </li>
-                              <li>
-                                  <a href="#">travel</a>
-                              </li>
-                              <li>
-                                  <a href="#">restaurant</a>
-                              </li>
-                              <li>
-                                  <a href="#">life style</a>
-                              </li>
-                              <li>
-                                  <a href="#">design</a>
-                              </li>
-                              <li>
-                                  <a href="#">illustration</a>
-                              </li>
-                          </ul>
-                      </aside>
+                      
 
 
                       <aside class="single_sidebar_widget instagram_feeds">
@@ -390,9 +271,11 @@
                       <aside class="single_sidebar_widget newsletter_widget">
                         <h4 class="widget_title">Newsletter</h4>
 
-                        <form action="#">
+                        <form action="#" method="post">
+                          {% csrf_token %}
                           <div class="form-group">
-                            <input type="email" class="form-control" placeholder="Enter email" required>
+                            <!-- <input type="email" class="form-control" placeholder="Enter email" required> -->
+                            {{subscriber_form.email}}
                           </div>
                           <button class="main_btn rounded-0 w-100" type="submit">Subscribe</button>
                         </form>
