--- a/core/templates/category.html
+++ b/core/templates/category.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 {% load static%}
 (% load i18n %)
-{% block content%}
 {% block title %}
 {{ title }}
 {% endblock %}
+{% block content%}
 
     <!--================Home Banner Area =================-->
     <section class="banner_area">
@@ -16,9 +16,9 @@
               <p>Very us move be blessed multiply night</p>
             </div>
             <div class="page_link">
-              <a href="index.html">Home</a>
-              <a href="category.html">Shop</a>
-              <a href="category.html">Women Fashion</a>
+              <a href="{% url 'index' %}">Home</a>
+              <a href="{% url 'category' %}">Shop</a>
+              <a href="{% url 'category' %}">Women Fashion</a>
             </div>
           </div>
         </div>
@@ -32,7 +32,7 @@
         <div class="row flex-row-reverse">
           <div class="col-lg-9">
             <div class="product_top_bar">
-              <div class="left_dorp">
+              <!-- <div class="left_dorp">
                 <select class="sorting">
                   <option value="1">Default sorting</option>
                   <option value="2">Default sorting 01</option>
@@ -43,7 +43,7 @@
                   <option value="2">Show 14</option>
                   <option value="4">Show 16</option>
                 </select>
-              </div>
+              </div> -->
             </div>
             
             <div class="latest_product_inner">
@@ -70,7 +70,7 @@
                       </div>
                     </div>
                     <div class="product-btm">
-                      <a href="#" class="d-block">
+                      <a href="{% url 'singleproduct' category.slug %}" class="d-block">
                         <h4>{{ category.name }}</h4>
                       </a>
                       <div class="mt-3">
@@ -344,7 +344,7 @@
             </div>
           </div>  
 
-          <div class="col-lg-3">
+          <!-- <div class="col-lg-3">
             <div class="left_sidebar_area">
               <aside class="left_widgets p_filter_widgets">
                 <div class="l_w_title">
@@ -442,7 +442,7 @@
                 </div>
               </aside>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
