--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -1,7 +1,9 @@
 {% extends 'base.html'%}
 {% load static %}
 {% load i18n %}
-
+{% block title %}
+  Home
+{% endblock %}
 {% block content %}
 
   <!--================Home Banner Area =================-->
@@ -13,7 +15,7 @@
             <p class="sub text-uppercase">men Collection</p>
             <h3><span>Show</span> Your <br />Personal <span>Style</span></h3>
             <h4>Fowl saw dry which a above together place.</h4>
-            <a class="main_btn mt-40" href="#">View Collection</a>
+            <a class="main_btn mt-40" href="{% url 'category' %}">View Collection</a>
           </div>
         </div>
       </div>
@@ -27,7 +29,7 @@
       <div class="row">
         <div class="col-lg-3 col-md-6">
           <div class="single-feature">
-            <a href="#" class="title">
+            <a href="{% url 'category' %}" class="title">
               <i class="flaticon-money"></i>
               <h3>Money back gurantee</h3>
             </a>
@@ -37,7 +39,7 @@
 
         <div class="col-lg-3 col-md-6">
           <div class="single-feature">
-            <a href="#" class="title">
+            <a href="{% url 'category' %}" class="title">
               <i class="flaticon-truck"></i>
               <h3>{% trans 'Free Delivery' %}</h3>
             </a>
@@ -47,7 +49,7 @@
 
         <div class="col-lg-3 col-md-6">
           <div class="single-feature">
-            <a href="#" class="title">
+            <a href="{% url 'category' %}" class="title">
               <i class="flaticon-support"></i>
               <h3>{% trans 'Alway support' %}</h3>
             </a>
@@ -57,7 +59,7 @@
 
         <div class="col-lg-3 col-md-6">
           <div class="single-feature">
-            <a href="#" class="title">
+            <a href="{% url 'category' %}" class="title">
               <i class="flaticon-blockchain"></i>
               <h3>Secure payment</h3>
             </a>
@@ -70,7 +72,7 @@
   <!-- End feature Area -->
 
   <!--================ Feature Product Area =================-->
-  <section class="feature_product_area section_gap_bottom_custom">
+  <!-- <section class="feature_product_area section_gap_bottom_custom">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-12">
@@ -167,6 +169,48 @@
         </div>
       </div>
     </div>
+  </section> -->
+  <section class="feature_product_area section_gap_bottom_custom">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-lg-12">
+          <div class="main_title">
+            <h2><span>Featured product</span></h2>
+            <p>{% trans "Bring called seed first of third give itself now ment" %}</p>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        {% for product in products|slice:":3" %}
+        <div class="col-lg-4 col-md-6">
+          <div class="single-product">
+            <div  class="product-img">
+              <img href="{% url 'singleproduct' product.slug %}" class="card-img" src="{{ product.image.url }}"/>
+              <div class="p_icon">
+                <a href="#">
+                  <i class="ti-eye"></i>
+                </a>
+                <a href="#">
+                  <i class="ti-heart"></i>
+                </a>
+                <a href="#">
+                  <i class="ti-shopping-cart"></i>
+                </a>
+              </div>
+            </div>
+            <div class="product-btm">
+              <a href="{% url 'singleproduct' product.slug %}" class="d-block">
+                <h4>{{ product.name }}</h4>
+              </a>
+              <div class="mt-3">
+                <span class="mr-4">{{ product.price }}$</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        {% endfor %}
+      </div>
+    </div>
   </section>
   <!--================ End Feature Product Area =================-->
 
@@ -178,7 +222,7 @@
           <div class="offer_content">
             <h3 class="text-uppercase mb-40">all men’s collection</h3>
             <h2 class="text-uppercase">50% off</h2>
-            <a href="#" class="main_btn mb-20 mt-5">Discover Now</a>
+            <a href="{% url 'category' %}" class="main_btn mb-20 mt-5">Discover Now</a>
             <p>Limited Time Offer</p>
           </div>
         </div>
@@ -188,7 +232,7 @@
   <!--================ End Offer Area =================-->
 
   <!--================ New Product Area =================-->
-  <section class="new_product_area section_gap_top section_gap_bottom_custom">
+  <!-- <section class="new_product_area section_gap_top section_gap_bottom_custom">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-12">
@@ -329,11 +373,68 @@
         </div>
       </div>
     </div>
+  </section> -->
+  <section class="new_product_area section_gap_top section_gap_bottom_custom">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-lg-12">
+          <div class="main_title">
+            <h2><span>new products</span></h2>
+            <p>Bring called seed first of third give itself now ment</p>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="new_product">
+            <h5 class="text-uppercase">collection of 2019</h5>
+            <h3 class="text-uppercase">Men’s summer t-shirt</h3>
+            <div class="product-img">
+              <img class="{% static 'img-fluid' %}" src="{% static 'img/product/new-product/new-product1.png' %}" alt="" />
+            </div>
+            <h4>$120.70</h4>
+            <a href="{% url 'category' %}" class="main_btn">Shop Now</a>
+          </div>
+        </div>
+        <div class="col-lg-6 mt-5 mt-lg-0">
+          <div class="row">
+            {% for product2 in products2|slice:":4" %}
+            <div class="col-lg-6 col-md-6">
+              <div class="single-product">
+                <div class="product-img">
+                  <img class="{% static 'img-fluid w-100' %}" src="{{ product2.image.url }}" alt="" />
+                  <div class="p_icon">
+                    <a href="#">
+                      <i class="ti-eye"></i>
+                    </a>
+                    <a href="#">
+                      <i class="ti-heart"></i>
+                    </a>
+                    <a href="#">
+                      <i class="ti-shopping-cart"></i>
+                    </a>
+                  </div>
+                </div>
+                <div class="product-btm">
+                  <a href="{% url 'singleproduct' product2.slug %}" class="d-block">
+                    <h4>{{ product2.name }}</h4>
+                  </a>
+                  <div class="mt-3">
+                    <span class="mr-4">{{ product2.price }}$ </span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            {% endfor %}
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
   <!--================ End New Product Area =================-->
 
   <!--================ Inspired Product Area =================-->
-  <section class="inspired_product_area section_gap_bottom_custom">
+  <!-- <section class="inspired_product_area section_gap_bottom_custom">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-12">
@@ -570,11 +671,53 @@
         </div>
       </div>
     </div>
+  </section> -->
+  <section class="inspired_product_area section_gap_bottom_custom">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-lg-12">
+          <div class="main_title">
+            <h2><span>Inspired products</span></h2>
+            <p>Bring called seed first of third give itself now ment</p>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        {% for product3 in products3|slice:":8" %}
+        <div class="col-lg-3 col-md-6">
+          <div class="single-product">
+            <div class="product-img">
+              <img class="{% static 'img-fluid w-100' %}" src="{{ product3.image.url }}" alt="" />
+              <div class="p_icon">
+                <a href="#">
+                  <i class="ti-eye"></i>
+                </a>
+                <a href="#">
+                  <i class="ti-heart"></i>
+                </a>
+                <a href="#">
+                  <i class="ti-shopping-cart"></i>
+                </a>
+              </div>
+            </div>
+            <div class="product-btm">
+              <a href="{% url 'singleproduct' product3.slug %}" class="d-block">
+                <h4>{{ product3.name }}</h4>
+              </a>
+              <div class="mt-3">
+                <span class="mr-4">{{ product3.price }}$</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        {% endfor %}
+      </div>
+    </div>
   </section>
   <!--================ End Inspired Product Area =================-->
 
   <!--================ Start Blog Area =================-->
-  <section class="blog-area section-gap">
+  <!-- <section class="blog-area section-gap">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-12">
@@ -660,6 +803,44 @@
             </div>
           </div>
         </div>
+      </div>
+    </div>
+  </section> -->
+  <section class="blog-area section-gap">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-lg-12">
+          <div class="main_title">
+            <h2><span>latest blog</span></h2>
+            <p>Bring called seed first of third give itself now ment</p>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        {% for blogg in blog|slice:":3" %}
+        <div class="col-lg-4 col-md-6">
+          <div class="single-blog">
+            <div class="thumb">
+              <img class="img-fluid" src="{{blogg.image.url}}" alt="">
+            </div>
+            <div class="short_details">
+              <div class="meta-top d-flex">
+                <a href="#">By Admin</a>
+                <a href="#"><i class="ti-comments-smiley"></i>2 Comments</a>
+              </div>
+              <a class="d-block" href="{% url 'blogdetails' blogg.slug  %}">
+                <h4>{{blogg.title|truncatechars:60 }}</h4>
+              </a>
+              <div class="text-wrap">
+                <p>
+                  {{blogg.description|truncatechars:80}}
+                </p>
+              </div>
+              <a href="{% url 'blogdetails' blogg.slug  %}" class="blog_btn">Learn More <span class="ml-2 ti-arrow-right"></span></a>
+            </div>
+          </div>
+        </div>
+        {% endfor %}
       </div>
     </div>
   </section>
