--- a/core/templates/partials/footer.html
+++ b/core/templates/partials/footer.html
@@ -7,40 +7,40 @@
         <div class="col-lg-2 col-md-6 single-footer-widget">
           <h4>Top Products</h4>
           <ul>
-            <li><a href="#">Managed Website</a></li>
-            <li><a href="#">Manage Reputation</a></li>
-            <li><a href="#">Power Tools</a></li>
-            <li><a href="#">Marketing Service</a></li>
+            <li><a href="{% url 'index' %}">Home</a></li>
+            <li><a href="{% url 'contact' %}">Contact Us</a></li>
+            <li><a href="{% url 'blog' %}">Blog </a></li>
+            <li><a href="{% url 'category' %}">Shop</a></li>
           </ul>
         </div>
         <div class="col-lg-2 col-md-6 single-footer-widget">
           <h4>Quick Links</h4>
           <ul>
-            <li><a href="#">Jobs</a></li>
-            <li><a href="#">Brand Assets</a></li>
-            <li><a href="#">Investor Relations</a></li>
-            <li><a href="#">Terms of Service</a></li>
+            <li><a href="{% url 'index' %}">Jobs</a></li>
+            <li><a href="{% url 'contact' %}">Brand Assets</a></li>
+            <li><a href="{% url 'blog' %}">Investor Relations</a></li>
+            <li><a href="{% url 'category' %}">Terms of Service</a></li>
           </ul>
         </div>
         <div class="col-lg-2 col-md-6 single-footer-widget">
           <h4>Features</h4>
           <ul>
-            <li><a href="#">Jobs</a></li>
-            <li><a href="#">Brand Assets</a></li>
-            <li><a href="#">Investor Relations</a></li>
-            <li><a href="#">Terms of Service</a></li>
+            <li><a href="{% url 'index' %}">Jobs</a></li>
+            <li><a href="{% url 'contact' %}">Brand Assets</a></li>
+            <li><a href="{% url 'blog' %}">Investor Relations</a></li>
+            <li><a href="{% url 'category' %}">Terms of Service</a></li>
           </ul>
         </div>
         <div class="col-lg-2 col-md-6 single-footer-widget">
           <h4>Resources</h4>
           <ul>
-            <li><a href="#">Guides</a></li>
-            <li><a href="#">Research</a></li>
-            <li><a href="#">Experts</a></li>
-            <li><a href="#">Agencies</a></li>
+            <li><a href="{% url 'index' %}">Guides</a></li>
+            <li><a href="{% url 'contact' %}">Research</a></li>
+            <li><a href="{% url 'blog' %}">Experts</a></li>
+            <li><a href="{% url 'category' %}">Agencies</a></li>
           </ul>
         </div>
-        <div class="col-lg-4 col-md-6 single-footer-widget">
+        <!-- <div class="col-lg-4 col-md-6 single-footer-widget">
           <h4>Newsletter</h4>
           <p>You can trust us. we only send promo offers,</p>
           <div class="form-wrap" id="mc_embed_signup">
@@ -56,13 +56,37 @@
               <div class="info"></div>
             </form>
           </div>
-        </div>
-      </div>
+        </div> -->
+      <!-- </div>
       <div class="footer-bottom row align-items-center">
-        <p class="footer-text m-0 col-lg-8 col-md-12"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+        <p class="footer-text m-0 col-lg-8 col-md-12">Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0.
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a> -->
+<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0.</p> -->
+<div class="col-lg-4 col-md-6 single-footer-widget">
+  <h4>Newsletter</h4>
+  <p>You can trust us. we only send promo offers,</p>
+  <div class="form-wrap" id="mc_embed_signup">
+    <form method='post'class="form-inline">
+      {% csrf_token %}
+      <div class="wrap-input1 w-full p-b-4">
+        {% comment %} <input class="input1 bg-none plh1 stext-107 cl7" type="text" name="email" placeholder="email@example.com"> {% endcomment %}
+        {{subscriber_form.email}}
+        <div class="focus-input1 trans-04"></div>
+      </div>
+      <div class="p-t-18">
+        <button class="click-btn btn btn-default">
+          Subscribe
+        </button>
+      </div>
+    </form>
+  </div>
+</div>
+</div>
+<div class="footer-bottom row align-items-center">
+<p class="footer-text m-0 col-lg-8 col-md-12"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-        <div class="col-lg-4 col-md-12 footer-social">
+        <!-- <div class="col-lg-4 col-md-12 footer-social">
           <a href="#"><i class="fa fa-facebook"></i></a>
           <a href="#"><i class="fa fa-twitter"></i></a>
           <a href="#"><i class="fa fa-dribbble"></i></a>
@@ -70,6 +94,15 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
         </div>
       </div>
     </div>
-  </footer>
+  </footer> -->
+  <div class="col-lg-4 col-md-12 footer-social">
+    <a href="{% url 'social:begin' 'facebook' %}"><i class="fa fa-facebook"></i></a>
+    <a href="{% url 'social:begin' 'facebook' %}"><i class="fa fa-twitter"></i></a>
+    <a href="{% url 'social:begin' 'facebook' %}"><i class="fa fa-dribbble"></i></a>
+    <a href="{% url 'social:begin' 'facebook' %}"><i class="fa fa-behance"></i></a>
+  </div>
+</div>
+</div>
+</footer>
   <!--================ End footer Area  =================--> 
  
