--- a/core/templates/single-product.html
+++ b/core/templates/single-product.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load static%}
+{% load static %}
 (% load i18n %)
 {% block content%}
     <!--================Home Banner Area =================-->
@@ -14,8 +14,8 @@
               <p>Very us move be blessed multiply night</p>
             </div>
             <div class="page_link">
-              <a href="index.html">Home</a>
-              <a href="single-product.html">Product Details</a>
+              <a href="{% url 'index' %}">Home</a>
+              <a href="{% url 'category' %}">Product</a>
             </div>
           </div>
         </div>
@@ -34,14 +34,14 @@
                 class="carousel slide"
                 data-ride="carousel"
               >
-                <ol class="carousel-indicators">
+                <!-- <ol class="carousel-indicators">
                   <li
                     data-target="#carouselExampleIndicators"
                     data-slide-to="0"
                     class="active"
                   >
                     <img
-                      src="img/product/single-product/s-product-s-2.jpg"
+                      src="{% static 'img/product/single-product/s-product-s-2.jpg' %}"
                       alt=""
                     />
                   </li>
@@ -50,7 +50,7 @@
                     data-slide-to="1"
                   >
                     <img
-                      src="img/product/single-product/s-product-s-3.jpg"
+                      src="{% static 'img/product/single-product/s-product-s-3.jpg' %}"
                       alt=""
                     />
                   </li>
@@ -59,30 +59,30 @@
                     data-slide-to="2"
                   >
                     <img
-                      src="img/product/single-product/s-product-s-4.jpg"
+                      src="{% static 'img/product/single-product/s-product-s-4.jpg' %}"
                       alt=""
                     />
                   </li>
-                </ol>
+                </ol> -->
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <img
                       class="d-block w-100"
-                      src="img/product/single-product/s-product-1.jpg"
+                      src="{{ product.image.url }}"
                       alt="First slide"
                     />
                   </div>
                   <div class="carousel-item">
                     <img
                       class="d-block w-100"
-                      src="img/product/single-product/s-product-1.jpg"
+                      src="{{ product.image.url }}"
                       alt="Second slide"
                     />
                   </div>
                   <div class="carousel-item">
                     <img
                       class="d-block w-100"
-                      src="img/product/single-product/s-product-1.jpg"
+                      src="{{ product.image.url }}"
                       alt="Third slide"
                     />
                   </div>
@@ -92,8 +92,8 @@
           </div>
           <div class="col-lg-5 offset-lg-1">
             <div class="s_product_text">
-              <h3>Faded SkyBlu Denim Jeans</h3>
-              <h2>$149.99</h2>
+              <h3>{{ product.name }}</h3>
+              <h2>{{ product.price }}</h2>
               <ul class="list">
                 <li>
                   <a class="active" href="#">
@@ -105,10 +105,7 @@
                 </li>
               </ul>
               <p>
-                Mill Oil is an innovative oil filled radiator with the most
-                modern technology. If you are looking for something that can
-                make your interior look awesome, and at the same time give you
-                the pleasant warm feeling during the winter.
+                {{ product.description }}
               </p>
               <div class="product_count">
                 <label for="qty">Quantity:</label>
@@ -136,7 +133,7 @@
                   <i class="lnr lnr-chevron-down"></i>
                 </button>
               </div>
-              <div class="card_area">
+              <!-- <div class="card_area">
                 <a class="main_btn" href="#">Add to Cart</a>
                 <a class="icon_btn" href="#">
                   <i class="lnr lnr lnr-diamond"></i>
@@ -144,7 +141,7 @@
                 <a class="icon_btn" href="#">
                   <i class="lnr lnr lnr-heart"></i>
                 </a>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -168,7 +165,7 @@
               >Description</a
             >
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a
               class="nav-link"
               id="profile-tab"
@@ -203,7 +200,7 @@
               aria-selected="false"
               >Reviews</a
             >
-          </li>
+          </li> -->
         </ul>
         <div class="tab-content" id="myTabContent">
           <div
@@ -332,7 +329,7 @@
                     <div class="media">
                       <div class="d-flex">
                         <img
-                          src="img/product/single-product/review-1.png"
+                          src="{% static 'img/product/single-product/review-1.png"
                           alt=""
                         />
                       </div>
@@ -353,7 +350,7 @@
                     <div class="media">
                       <div class="d-flex">
                         <img
-                          src="img/product/single-product/review-2.png"
+                          src="{% static 'img/product/single-product/review-2.png"
                           alt=""
                         />
                       </div>
@@ -374,7 +371,7 @@
                     <div class="media">
                       <div class="d-flex">
                         <img
-                          src="img/product/single-product/review-3.png"
+                          src="{% static 'img/product/single-product/review-3.png"
                           alt=""
                         />
                       </div>
@@ -467,7 +464,7 @@
             role="tabpanel"
             aria-labelledby="review-tab"
           >
-            <div class="row">
+            <!-- <div class="row">
               <div class="col-lg-6">
                 <div class="row total_rate">
                   <div class="col-6">
@@ -540,7 +537,27 @@
                     <div class="media">
                       <div class="d-flex">
                         <img
-                          src="img/product/single-product/review-1.png"
+                          src="{% static 'img/product/single-product/review-1.png"
+                          alt=""
+                        />
+                      </div>
+                      <div class="media-body">
+                        <h4></h4>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                      </div>
+                    </div>
+                    <p>
+                    </p>
+                  </div>
+                  <div class="review_item">
+                    <div class="media">
+                      <div class="d-flex">
+                        <img
+                          src="{% static 'img/product/single-product/review-2.png"
                           alt=""
                         />
                       </div>
@@ -564,31 +581,7 @@
                     <div class="media">
                       <div class="d-flex">
                         <img
-                          src="img/product/single-product/review-2.png"
-                          alt=""
-                        />
-                      </div>
-                      <div class="media-body">
-                        <h4>Blake Ruiz</h4>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                      </div>
-                    </div>
-                    <p>
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                      sed do eiusmod tempor incididunt ut labore et dolore magna
-                      aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                      ullamco laboris nisi ut aliquip ex ea commodo
-                    </p>
-                  </div>
-                  <div class="review_item">
-                    <div class="media">
-                      <div class="d-flex">
-                        <img
-                          src="img/product/single-product/review-3.png"
+                          src="{% static 'img/product/single-product/review-3.png"
                           alt=""
                         />
                       </div>
@@ -610,7 +603,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-6">
+              <!-- <div class="col-lg-6">
                 <div class="review_box">
                   <h4>Add a Review</h4>
                   <p>Your Rating:</p>
@@ -704,8 +697,8 @@
                     </div>
                   </form>
                 </div>
-              </div>
-            </div>
+              </div> 
+            </div> -->
           </div>
         </div>
       </div>
